Parse graphml file correctly